fix spacing between items

--- a/style.css
+++ b/style.css
@@ -429,13 +429,13 @@ h2 {
   }
 
   .contact-header {
-    /* flex: 1; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0 24px 0 24px;
     margin-top: 103px;
     color: #fff;
+    align-items: center;
   }
 
   .contact-header h2 {
@@ -446,12 +446,11 @@ h2 {
   .contact-header p {
     color: #ebebff;
     align-self: center;
+    width: 327px;
   }
 
   .contact {
-    flex: 1;
-    align-self: flex-start;
-    justify-content: space-between;
+    width: 80%;
   }
 
   .contact ul {
@@ -463,7 +462,7 @@ h2 {
   }
 
   .contact ul li input {
-    
+    width: 100%;
     padding: 10px;
     color: #172b4d;
     border-radius: 8px;
@@ -471,6 +470,7 @@ h2 {
   }
 
   .contact ul li textarea {
+    width: 100%;
     padding: 10px;
     color: #172b4d;
     border-radius: 8px;
@@ -484,5 +484,5 @@ h2 {
     font-size: 17px;
     border-radius: 12px;
   }
-  
+
 }
